--- a/packages/backend-common/package.json
+++ b/packages/backend-common/package.json
@@ -11,11 +11,13 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "amqplib": "^0.10.8",
     "zod": "^4.0.14"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/amqplib": "^0.10.7",
     "@types/node": "^20.10.6",
     "typescript": "^5.3.3"
   }
