--- a/apps/engine/package.json
+++ b/apps/engine/package.json
@@ -8,7 +8,8 @@
     "start": "bun run index.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/redis": "^4.0.11"
   },
   "peerDependencies": {
     "typescript": "^5.9.2",
@@ -18,6 +19,7 @@
   "dependencies": {
     "@types/amqplib": "^0.10.7",
     "amqplib": "^0.10.8",
-    "drizzle-orm": "^0.44.4"
+    "drizzle-orm": "^0.44.4",
+    "redis": "^5.8.0"
   }
 }
