--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,9 +12,22 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "@types/js-cookie": "^3.0.6",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.31",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.469.0",
     "next": "^15.4.2",
+    "next-themes": "^0.4.4",
+    "postcss": "^8.4.49",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "sonner": "^1.5.0",
+    "swr": "^2.3.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
